<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterTailorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_login"
            android:layout_marginTop="65dp"/>

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/register_full_name"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/register_username"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="phone"
            android:hint="@string/register_phone"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:layout_marginBottom="10dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:hint="@string/password_confirmation"
                android:layout_marginBottom="10dp"
                android:importantForAutofill="no" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="44dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tailor"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/tailor_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here"
                android:textColor="@color/link"
                android:textStyle="bold"
                android:clickable="true"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/dark"
            android:text="@string/sign_up_button"
            android:layout_gravity="bottom"
            android:padding="0dp"/>
    </LinearLayout>

</RelativeLayout>